fix(RadioCheckbox): alignment fix (#255)
* fix(RadioCheckbox): alignment fix

* fix(radio_checkbox): alignment fix

* fix(radio_checkbox): fix checkbox lable alignment

* chore: updated custom elements

--- a/src/components/reusable/checkbox/checkbox.scss
+++ b/src/components/reusable/checkbox/checkbox.scss
@@ -7,6 +7,8 @@
 
 label {
   display: inline-flex;
+  align-items: center;
+  gap: 10px;
   width: 100%;
   position: relative;
 
@@ -19,7 +21,6 @@ span {
   order: 1;
   overflow: hidden;
   text-overflow: ellipsis;
-  margin-left: 10px;
 }
 
 input {
@@ -30,7 +31,7 @@ input {
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
-  margin: 4px 0 0;
+  margin: 0;
   width: 16px;
   height: 16px;
   border: 2px solid var(--kd-color-border-ui);
